--- a/src/main/resources/static/topic.html
+++ b/src/main/resources/static/topic.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
-<html xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Отправить сообщение в чат</title>
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Чат</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
 <body>
